# mantissa

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  clippy.toml  dist-workspace.toml  mantissa-dev.yaml  setup-dev-cluster.sh
crates/client/: Cargo.toml
crates/client/src/: cluster.rs  config.rs  connection.rs  errors.rs  host_ports.rs  lib.rs  output.rs  runtime_contract.rs  workload_submit.rs  workload_wire.rs
crates/client/src/agents/: close.rs  input.rs  inspect.rs  list.rs  manifest.rs  mod.rs  run.rs  runs.rs  snapshot.rs  submit.rs  wait.rs
crates/client/src/clusters/: list.rs  merge.rs  mod.rs  name.rs  operations.rs  split.rs
crates/client/src/jobs/: cancel.rs  delete.rs  inspect.rs  list.rs  logs.rs  manifest.rs  mod.rs  run.rs  runtime.rs  snapshot.rs  wait.rs
crates/client/src/networks/: attachments.rs  create.rs  delete.rs  inspect.rs  list.rs  mod.rs  status.rs  types.rs
crates/client/src/node/: drain.rs  info.rs  join.rs  labels.rs  leave.rs  link.rs  list.rs  mod.rs  status.rs
crates/client/src/scheduler/: slots.rs
crates/client/src/secrets/: create.rs  delete.rs  list.rs  mod.rs  rotate.rs  show.rs  update.rs
crates/client/src/services/: deploy.rs  list.rs  manifest.rs  mod.rs  rollout.rs  run.rs  state.rs  stop.rs
crates/client/src/tasks/: attach.rs  exec.rs  list.rs  logs.rs  mod.rs  start.rs  stop.rs  util.rs
crates/client/src/token/: rotate.rs  show.rs
crates/client/src/volumes/: create.rs  delete.rs  inspect.rs  list.rs  mod.rs  status.rs  types.rs
crates/client/src/workload/: list.rs  mod.rs  start.rs  stop.rs
crates/crdt_store/: Cargo.toml  build.rs
crates/crdt_store/schema/: store.capnp
crates/crdt_store/src/: adapter.rs  codec.rs  error.rs  hash.rs  lib.rs  mst_store.rs  mvreg.rs  table_set.rs  uuid_key.rs
crates/mantissa-cli/: Cargo.toml  README.md
crates/mantissa-cli/src/: app.rs  cli.rs  daemon.rs  host_ports.rs  lib.rs  main.rs  rest.rs
crates/mantissa-cli/src/agents/: cancel.rs  close.rs  delete.rs  input.rs  inspect.rs  list.rs  logs.rs  mod.rs  run.rs  runs.rs  snapshot.rs  submit.rs  wait.rs
crates/mantissa-cli/src/clusters/: list.rs  merge.rs  mod.rs  name.rs  operations.rs  split.rs
crates/mantissa-cli/src/ingress/: apply.rs  delete.rs  endpoints.rs  inspect.rs  list.rs  mod.rs
crates/mantissa-cli/src/jobs/: cancel.rs  delete.rs  inspect.rs  list.rs  logs.rs  mod.rs  run.rs  snapshot.rs  wait.rs
crates/mantissa-cli/src/networks/: attachments.rs  create.rs  delete.rs  inspect.rs  list.rs  mod.rs  status.rs
crates/mantissa-cli/src/nodes/: drain.rs  evict.rs  info.rs  join.rs  labels.rs  leave.rs  list.rs  mod.rs  resume.rs  status.rs
crates/mantissa-cli/src/scheduler/: slots.rs
crates/mantissa-cli/src/secrets/: create.rs  delete.rs  list.rs  mod.rs  rotate.rs  show.rs  update.rs
crates/mantissa-cli/src/services/: deploy.rs  list.rs  mod.rs  rollout.rs  stop.rs  wait.rs
crates/mantissa-cli/src/tasks/: attach.rs  exec.rs  list.rs  logs.rs  mod.rs  start.rs  stop.rs  util.rs
crates/mantissa-cli/src/token/: rotate.rs  show.rs
crates/mantissa-cli/src/volumes/: create.rs  delete.rs  import.rs  inspect.rs  list.rs  mod.rs  status.rs
crates/mantissa-cli/tests/: rest_token_cli.rs
crates/mantissa-client/: Cargo.toml  README.md
crates/mantissa-client/src/: config.rs  connection.rs  error.rs  errors.rs  host_ports.rs  lib.rs  rest.rs  workload_submit.rs  workload_wire.rs
crates/mantissa-client/src/agents/: cancel.rs  close.rs  delete.rs  input.rs  inspect.rs  list.rs  logs.rs  manifest.rs  mod.rs  run.rs  runs.rs  snapshot.rs  submit.rs  wait.rs
crates/mantissa-client/src/clusters/: list.rs  merge.rs  mod.rs  name.rs  operations.rs  split.rs
crates/mantissa-client/src/ingress/: apply.rs  delete.rs  endpoints.rs  inspect.rs  list.rs  mod.rs  types.rs
crates/mantissa-client/src/jobs/: cancel.rs  delete.rs  inspect.rs  list.rs  logs.rs  manifest.rs  mod.rs  run.rs  snapshot.rs  wait.rs
crates/mantissa-client/src/networks/: attachments.rs  create.rs  delete.rs  inspect.rs  list.rs  mod.rs  status.rs  types.rs
crates/mantissa-client/src/nodes/: drain.rs  evict.rs  info.rs  join.rs  labels.rs  leave.rs  list.rs  mod.rs  resume.rs  status.rs
crates/mantissa-client/src/scheduler/: mod.rs  slots.rs
crates/mantissa-client/src/secrets/: create.rs  delete.rs  list.rs  mod.rs  rotate.rs  show.rs  update.rs
crates/mantissa-client/src/services/: deploy.rs  list.rs  manifest.rs  mod.rs  rollout.rs  run.rs  stop.rs  wait.rs
crates/mantissa-client/src/tasks/: attach.rs  exec.rs  list.rs  logs.rs  mod.rs  start.rs  stop.rs  util.rs
crates/mantissa-ebpf/: Cargo.toml  README.md
crates/mantissa-net/: Cargo.toml  README.md
crates/mantissa-net/examples/: README.md  noise_rpc_bench.rs  noise_transport_bench.rs
crates/mantissa-net/src/: inproc.rs  lib.rs  paths.rs  tcp_secure.rs  unix_socket.rs  wireguard.rs
crates/mantissa-rest/: Cargo.toml  README.md
crates/mantissa-rest/openapi/: mantissa-rest.openapi.json
crates/mantissa-rest/src/: auth.rs  client_worker.rs  config.rs  error.rs  extract.rs  lib.rs  main.rs  openapi.rs  server.rs  state.rs
crates/mantissa-rest/tests/: openapi.rs
crates/mantissa-sandbox/: Cargo.toml  README.md
crates/net/: Cargo.toml
crates/net/examples/: README.md  noise_rpc_bench.rs  noise_transport_bench.rs
crates/net/src/: inproc.rs  lib.rs  noise.rs  paths.rs  tcp_secure.rs  unix_socket.rs  wireguard.rs
crates/network-ebpf/: Cargo.toml
crates/network-ebpf/src/: lib.rs
docs/: cli.md  (+27 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: client_manifest_parsers.rs  control_plane_parsers.rs  controller_store_value_codecs.rs  dedupe_cache_sequences.rs  domain_store_value_codecs.rs  infra_store_value_codecs.rs  mst_store_sequences.rs  mvreg_properties.rs  network_overlay_allocation.rs  noise_framing.rs  placement_constraints.rs  raw_capnp_decode.rs  replicated_domain_delta.rs  scheduler_snapshot_codec.rs  scheduler_state_machine.rs  store_codecs.rs  sync_encoding.rs  task_spec_codec.rs  workload_capnp_codecs.rs
(+587 files in other folders)
