[package]
name = "mantissa"
version = "0.1.0"
authors = ["Alexandre Beslic"]
license = "Apache-2.0"
description = "Distributed scheduler and cluster management"
homepage = "https://mantissa.io"
repository = "https://github.com/abronan/mantissa"
readme = "README.md"
edition = "2024"

[workspace]
members = [
    "crates/mantissa-sandbox",
    "crates/mantissa-store",
    "crates/mantissa-protocol",
    "crates/mantissa-net",
    "crates/mantissa-client",
    "crates/mantissa-cli",
    "crates/mantissa-health",
    "crates/mantissa-ui",
    "crates/mantissa-ebpf",
]
default-members = [".", "crates/mantissa-cli", "crates/mantissa-sandbox"]

[workspace.package]
license = "Apache-2.0"
homepage = "https://mantissa.io"
repository = "https://github.com/abronan/mantissa"

[workspace.dependencies]
capnp = "0.25"
capnp-rpc = "0.25"
capnp-futures = "0.25"
capnpc = "0.25"
parking_lot = "0.12"

[workspace.lints.clippy]
unwrap_used = "deny"
disallowed_types = "warn"

[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya" }
anyhow = "1"
cargo_metadata = "0.23"

[lints]
workspace = true

[dependencies]
mantissa-store = { path = "crates/mantissa-store" }
mantissa-protocol = { path = "crates/mantissa-protocol" }
mantissa-net = { path = "crates/mantissa-net" }
mantissa-client = { path = "crates/mantissa-client" }
mantissa-health = { path = "crates/mantissa-health" }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
async-channel = "2.5.0"
rand = { version = "0.9.2", features = ["std"] }
bytes = "1"
data-encoding = "2.9.0"
blake3 = "1"
uuid = { version = "1", features = ["v4", "v7", "fast-rng", "serde"] }
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
snow = { version = "0.9.6", default-features = false, features = ["ring-accelerated"] }
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
argon2 = { version = "0.5.3", features = ["std"] }
zeroize = "1.8.1"
ed25519-dalek = { version = "2", default-features = false, features = [
    "alloc",
] }
getrandom = "0.2"

# Container / MicroVMs / Task management
bollard = "0.20.2"

# used to fetch cpu system level information.
raw-cpuid = "11.5.0"

# redb is used as our storage engine for the cluster state.
redb = "3.1.1"

# crdt based structures useful for state replication and conflict resolution.
merkle-search-tree = "0.8.0"
crdts = "7.3.2"

# used for fully deterministic hashing across platforms and compiler versions (XXHash).
twox-hash = "2.1.1"

# Serialization / Parsing / Configuration
ron = "0.10.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_bytes = "0.11"
hickory-proto = "0.25.2"
notify = "6.1.1"

# capnproto
capnp = { workspace = true }
capnp-rpc = { workspace = true }
capnp-futures = { workspace = true }

sysinfo = "0.36.1"
dirs = "5.0.1"
anyhow = "1"
arc-swap = "1.6"

# Logging
metrics = "0.24.5"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false, features = ["http-listener"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "env-filter",
    "ansi",
    "time",
] }
time = { version = "0.3", features = ["local-offset", "macros"] }
log = "0.4"
parking_lot = { workspace = true }

once_cell = "1.21.3"
base64 = "0.22.1"
hkdf = "0.12.4"
sha2 = "0.10.9"
tempfile = "3"
libc = "0.2"
etherparse = "0.18"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
tempfile = "3"
anyhow = "1"

# eBPF / Networking / Linux only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13.1"
rtnetlink = { version = "0.18.1", default-features = false, features = ["tokio_socket"] }
netlink-packet-route = "0.19"
netlink-packet-utils = "0.5"
netlink-packet-core = "0.8"
nix = { version = "0.29", default-features = false, features = ["sched", "mount", "fs"] }
defguard_wireguard_rs = "0.8.0"
nvml-wrapper = "0.10"
iptables = "0.6"

[features]
default = []
testkit = []
