[package]
name = "mantissa"
version = "0.3.0"
authors = ["Alexandre Beslic"]
license = "Apache-2.0"
description = "Distributed scheduler and cluster management"
homepage = "https://mantissa.io"
repository = "https://github.com/MantissaLabs/mantissa"
readme = "README.md"
edition = "2024"

[workspace]
members = [
    "crates/mantissa-sandbox",
    "crates/mantissa-store",
    "crates/mantissa-protocol",
    "crates/mantissa-net",
    "crates/mantissa-client",
    "crates/mantissa-cli",
    "crates/mantissa-rest",
    "crates/mantissa-health",
    "crates/mantissa-ui",
    "crates/mantissa-ebpf",
]
default-members = [".", "crates/mantissa-cli", "crates/mantissa-sandbox"]

[workspace.package]
license = "Apache-2.0"
homepage = "https://mantissa.io"
repository = "https://github.com/MantissaLabs/mantissa"

[workspace.dependencies]
# Cap'n Proto schema and RPC tooling shared across workspace crates.
capnp = "0.26.0"
capnp-rpc = "0.26.0"
capnp-futures = "0.26.0"
capnpc = "0.26.0"

# Shared synchronization primitive used by runtime and support crates.
parking_lot = "0.12"

[workspace.lints.clippy]
unwrap_used = "deny"
disallowed_types = "warn"

[lints]
workspace = true

[dependencies]
# Workspace crates
mantissa-protocol = { path = "crates/mantissa-protocol" }
mantissa-store = { path = "crates/mantissa-store" }
mantissa-net = { path = "crates/mantissa-net" }
mantissa-client = { path = "crates/mantissa-client" }
mantissa-health = { path = "crates/mantissa-health" }

# Error handling, async runtime, and shared state
anyhow = "1"
thiserror = "2.0.12"
async-trait = "0.1.88"
async-channel = "2.5.0"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
arc-swap = "1.6"
parking_lot = { workspace = true }
once_cell = "1.21.3"

# Identifiers, time, and randomness
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["local-offset", "macros"] }
uuid = { version = "1", features = ["v4", "v7", "fast-rng", "serde"] }
rand = { version = "0.9.2", features = ["std"] }
getrandom = "0.2"

# Serialization, encoding, and schemas
bytes = "1"
base64 = "0.22.1"
data-encoding = "2.9.0"
ron = "0.10.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_bytes = "0.11"

# Cap'n Proto wire codecs and RPC support.
capnp = { workspace = true }
capnp-rpc = { workspace = true }
capnp-futures = { workspace = true }

# Cryptography and secret handling
blake3 = "1"
hkdf = "0.12.4"
sha2 = "0.10.9"
snow = { version = "0.9.6", default-features = false, features = ["ring-accelerated"] }
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
argon2 = { version = "0.5.3", features = ["std"] }
zeroize = "1.8.1"
ed25519-dalek = { version = "2", default-features = false, features = [
    "alloc",
] }

# Container / MicroVMs / Task management
bollard = "0.20.2"

# Host inventory, filesystem, and platform helpers
# used to fetch cpu system level information.
raw-cpuid = "11.5.0"
sysinfo = "0.36.1"
dirs = "5.0.1"
notify = "6.1.1"
tempfile = "3"
libc = "0.2"

# Storage, replication, and deterministic hashing
# redb is used as our storage engine for the cluster state.
redb = "3.1.1"

# crdt based structures useful for state replication and conflict resolution.
merkle-search-tree = "0.8.0"
crdts = "7.3.2"

# Used for fully deterministic hashing across platforms and compiler versions (XXHash).
twox-hash = "2.1.1"

# Network protocols and packet parsing
hickory-proto = "0.26.1"
etherparse = "0.18"

# Observability
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false, features = ["http-listener"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "env-filter",
    "ansi",
    "time",
] }
log = "0.4"

[dev-dependencies]
# Test harness support
anyhow = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }

# REST, TLS, and task WebSocket integration tests
axum = "0.8"
mantissa-rest = { path = "crates/mantissa-rest" }
rcgen = { version = "0.14", features = ["pem"] }
rustls = "0.23"
serde_json = "1"
tokio-tungstenite = "0.27"
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["util"] }

# eBPF / Networking / Linux only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# eBPF program loading.
aya = "0.13.1"

# Linux networking, namespaces, firewalling, and WireGuard integration.
rtnetlink = { version = "0.18.1", default-features = false, features = ["tokio_socket"] }
netlink-packet-route = "0.19"
netlink-packet-utils = "0.5"
netlink-packet-core = "0.8"
nix = { version = "0.29", default-features = false, features = ["sched", "mount", "fs"] }
defguard_wireguard_rs = "0.8.0"
iptables = "0.6"

# GPU inventory for scheduling labels/capacity on Linux nodes.
nvml-wrapper = "0.10"

[build-dependencies]
anyhow = "1"
aya-build = { git = "https://github.com/aya-rs/aya" }
cargo_metadata = "0.23"

[features]
default = []
testkit = []
