[package]
name = "mantissa-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
capnp = "0.25"
libfuzzer-sys = "0.4"
mantissa = { path = ".." }
mantissa-net = { path = "../crates/mantissa-net" }
mantissa-protocol = { path = "../crates/mantissa-protocol" }
mantissa-store = { path = "../crates/mantissa-store" }
redb = "3.1.1"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "rt"] }
uuid = "1"

[[bin]]
name = "raw_capnp_decode"
path = "fuzz_targets/raw_capnp_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "store_codecs"
path = "fuzz_targets/store_codecs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mvreg_properties"
path = "fuzz_targets/mvreg_properties.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sync_encoding"
path = "fuzz_targets/sync_encoding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "noise_framing"
path = "fuzz_targets/noise_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mst_store_sequences"
path = "fuzz_targets/mst_store_sequences.rs"
test = false
doc = false
bench = false

[[bin]]
name = "placement_constraints"
path = "fuzz_targets/placement_constraints.rs"
test = false
doc = false
bench = false
