[package]
name = "mantissa-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
capnp = "0.26.0"
ed25519-dalek = "2"
libfuzzer-sys = "0.4"
mantissa = { path = ".." }
mantissa-client = { path = "../crates/mantissa-client" }
mantissa-health = { path = "../crates/mantissa-health" }
mantissa-net = { path = "../crates/mantissa-net" }
mantissa-protocol = { path = "../crates/mantissa-protocol" }
mantissa-store = { path = "../crates/mantissa-store" }
redb = "3.1.1"
ron = "0.10.1"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "rt"] }
uuid = "1"

[[bin]]
name = "raw_capnp_decode"
path = "fuzz_targets/raw_capnp_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "store_codecs"
path = "fuzz_targets/store_codecs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mvreg_properties"
path = "fuzz_targets/mvreg_properties.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sync_encoding"
path = "fuzz_targets/sync_encoding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "noise_framing"
path = "fuzz_targets/noise_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mst_store_sequences"
path = "fuzz_targets/mst_store_sequences.rs"
test = false
doc = false
bench = false

[[bin]]
name = "placement_constraints"
path = "fuzz_targets/placement_constraints.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scheduler_snapshot_codec"
path = "fuzz_targets/scheduler_snapshot_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "domain_store_value_codecs"
path = "fuzz_targets/domain_store_value_codecs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "infra_store_value_codecs"
path = "fuzz_targets/infra_store_value_codecs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "controller_store_value_codecs"
path = "fuzz_targets/controller_store_value_codecs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "workload_capnp_codecs"
path = "fuzz_targets/workload_capnp_codecs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "task_spec_codec"
path = "fuzz_targets/task_spec_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "control_plane_parsers"
path = "fuzz_targets/control_plane_parsers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "network_overlay_allocation"
path = "fuzz_targets/network_overlay_allocation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "client_manifest_parsers"
path = "fuzz_targets/client_manifest_parsers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scheduler_state_machine"
path = "fuzz_targets/scheduler_state_machine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dedupe_cache_sequences"
path = "fuzz_targets/dedupe_cache_sequences.rs"
test = false
doc = false
bench = false

[[bin]]
name = "replicated_domain_delta"
path = "fuzz_targets/replicated_domain_delta.rs"
test = false
doc = false
bench = false
