[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1"
capnp = "0.23"
capnp-rpc = "0.23"
capnp-futures = "0.23"
futures = "0.3.31"
protocol = { path = "../protocol" }
net = { path = "../net" }
tabwriter = "1"
tokio = { version = "1", features = ["net", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
ron = "0.10.1"
blake3 = "1"

[features]
default = []
testkit = []
