[package]
name = "mantissa-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[[bin]]
name = "mantissa"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22.1"
capnp = { workspace = true }
capnp-rpc = { workspace = true }
clap = { version = "4.5.45", features = ["derive", "cargo"] }
crossterm = "0.28.1"
mantissa = { path = "../.." }
mantissa-client = { path = "../mantissa-client" }
mantissa-net = { path = "../mantissa-net" }
mantissa-protocol = { path = "../mantissa-protocol" }
mantissa-rest = { path = "../mantissa-rest" }
mantissa-ui = { path = "../mantissa-ui" }
parking_lot = { workspace = true }
rpassword = "7.4.0"
tabwriter = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1.8.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
rcgen = { version = "0.14", features = ["pem"] }
rustls = "0.23"
sha2 = "0.10"
tempfile = "3"
tokio-rustls = "0.26"
