[package]
name = "mantissa-client"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
capnp = { workspace = true }
capnp-rpc = { workspace = true }
futures = "0.3.31"
mantissa-protocol = { path = "../mantissa-protocol" }
mantissa-net = { path = "../mantissa-net" }
tokio = { version = "1", features = ["io-util", "net", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
ron = "0.10.1"
blake3 = "1"

[features]
default = []
testkit = []
