[package]
name = "mantissa-rest"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[[bin]]
name = "mantissa-rest"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = "0.8"
base64 = "0.22.1"
capnp = { workspace = true }
capnp-rpc = { workspace = true }
futures-core = "0.3"
mantissa-client = { path = "../mantissa-client" }
mantissa-protocol = { path = "../mantissa-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
