[package]
name = "mantissa-rest"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22.1"
capnp = { workspace = true }
capnp-rpc = { workspace = true }
futures-core = "0.3"
mantissa-client = { path = "../mantissa-client", features = ["openapi"] }
mantissa-protocol = { path = "../mantissa-protocol" }
rustls = "0.23"
rustls-pki-types = { version = "1.14", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync"] }
tracing = "0.1"
utoipa = { version = "5.5.0", features = ["uuid"] }
utoipa-axum = "0.2.0"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
