[package]
name = "net"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Network and communication utilities"

[dependencies]
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }
thiserror = "1"
capnp = "0.21.4"
capnp-rpc = "0.21"
capnp-futures = "0.21"
snow = "0.9.6"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2", default-features = false, features = [
    "alloc",
] }
getrandom = "0.2"
